# wolfserve

./: .gitignore  Cargo.toml  LICENSE  README.md  build_lib.sh  copyfiles  fix_php_fpm.sh  install.sh  install_precompiled.sh  install_service.sh  package_release.sh  run.sh  run_bin.sh  upgrade.sh  wolfserve.toml.example
public/: Untitled-1.ipynb  features.php  index.php  rust.php  upload_debug.php
src/: admin.rs  apache.rs  main.rs
wolflib/: Cargo.toml
wolflib/src/: lib.rs
