[package]
name = "wolfserve"
version = "0.2.2"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }
fastcgi-client = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip", "compression-br", "compression-deflate"] }

hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
http-body-util = "0.1"
mime_guess = "2"
toml = "0.8"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
futures-util = "0.3"
hyper-util = { version = "0.1.19", features = ["full"] }
regex = "1"
bcrypt = "0.15"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"

